dist/1.0/bin/sample/retrieveUnpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Local_Ref__c</fullName>
        <description>Related Service Component Local Reference name. Used for IS services.</description>
        <formula>Service_Component__r.LocalReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Related Service Component Local Reference name. Used for IS services.</inlineHelpText>
        <label>Local Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Service_Bundle_Name__c</fullName>
        <description>Related Service Bundle&apos;s local name.Used for IS services</description>
        <formula>Service_Bundle__r.LocalBundleName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Related Service Bundle&apos;s local name.Used for IS services</inlineHelpText>
        <label>Local Service Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Service_Component_Name__c</fullName>
        <description>Related Service Component&apos;s local name. Used for IS services</description>
        <formula>Service_Component__r.LocalServiceName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Related Service Component&apos;s local name. Used for IS services</inlineHelpText>
        <label>Local Service Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case locking, blocks the availability of takeovering the TT by OCTT;</description>
        <inlineHelpText>Case locking, blocks the availability of takeovering the TT by OCTT;</inlineHelpText>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MM_BA_City__c</fullName>
        <description>Mail Merge field which takes City name from Billing Account address</description>
        <formula>Billing_Account__r.Postal_Code__c &amp; &quot; &quot; &amp;  Billing_Account__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mail Merge field which takes City name from Billing Account address</inlineHelpText>
        <label>MM_BA_City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_BA_Country__c</fullName>
        <description>Mail Merge field which takes Country name from Billing Account address</description>
        <formula>TEXT(Billing_Account__r.Country__c)</formula>
        <inlineHelpText>Mail Merge field which takes Country name from Billing Account address</inlineHelpText>
        <label>MM_BA_Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_BA_State__c</fullName>
        <description>Mail Merge field which takes State name from Billing Account address</description>
        <formula>Billing_Account__r.State_Province__c</formula>
        <inlineHelpText>Mail Merge field which takes State name from Billing Account address</inlineHelpText>
        <label>MM_BA_State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_BA_Street__c</fullName>
        <description>Mail Merge field which takes Street name from Billing Account address</description>
        <formula>Billing_Account__r.Street_1__c &amp; &quot; &quot; &amp;   Billing_Account__r.Street_2__c &amp; &quot; &quot; &amp;  Billing_Account__r.Street_No__c</formula>
        <inlineHelpText>Mail Merge field which takes Street name from Billing Account address</inlineHelpText>
        <label>MM_BA_Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_City_Code__c</fullName>
        <description>Mail Merge field which takes City code from Account address</description>
        <formula>Account.BillingPostalCode &amp; &apos; &apos; &amp;  Account.BillingCity</formula>
        <inlineHelpText>Mail Merge field which takes City code from Account address</inlineHelpText>
        <label>MM_City_Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_SB__c</fullName>
        <description>Mail Merge field which takes related service name</description>
        <formula>Service_Bundle__r.CBundleType__r.Name</formula>
        <inlineHelpText>Mail Merge field which takes related service name</inlineHelpText>
        <label>MM_SB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_Street_No__c</fullName>
        <description>Mail Merge field which takes Street No from Account&apos;s billing address</description>
        <formula>Account.BillingStreet</formula>
        <inlineHelpText>Mail Merge field which takes Street No from Account&apos;s billing address</inlineHelpText>
        <label>MM_Street_No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_date__c</fullName>
        <description>Mail Merge field containg todays date in requested format</description>
        <formula>TEXT(DAY(TODAY())) &amp; &apos;-&apos; &amp; TEXT(MONTH(TODAY())) &amp; &apos;-&apos; &amp; TEXT(YEAR(TODAY()))</formula>
        <inlineHelpText>Mail Merge field containg todays date in requested format</inlineHelpText>
        <label>MM_date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_Received_Date__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Date when notice has been received. Required for reporting and churn process.</inlineHelpText>
        <label>Notice Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_services__c</fullName>
        <description>Field added on Full Sandbox by Emir Ekinovic, 2011-09-30 11:31</description>
        <inlineHelpText>Field added on Full Sandbox by Emir Ekinovic, 2011-09-30 11:31</inlineHelpText>
        <label>Number of services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outage_Reason_English__c</fullName>
        <description>Reason of Mass Outage</description>
        <inlineHelpText>Reason of Mass Outage</inlineHelpText>
        <label>Outage Reason (English)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outage_Reason_Local__c</fullName>
        <description>Outage reason in local language</description>
        <inlineHelpText>Outage reason in local language</inlineHelpText>
        <label>Outage Reason Local</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outage_from__c</fullName>
        <description>Date indicate when mass outage starts.</description>
        <inlineHelpText>Date indicate when mass outage starts.</inlineHelpText>
        <label>Outage from</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outage_phase_changed_toApproved__c</fullName>
        <label>Outage phase changed toApproved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outage_to__c</fullName>
        <description>Old technical field. Not used anymore.</description>
        <inlineHelpText>Old technical field. Not used anymore.</inlineHelpText>
        <label>Outage to</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Relation to Partner Account which informs that the Case has ben registered by given Partner</description>
        <inlineHelpText>Relation to Partner Account which informs that the Case has ben registered by given Partner</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Partner Account)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_User__c</fullName>
        <description>Reletion Contact representing Partner emplyee which has registered the Case</description>
        <label>Partner User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Term_List__c</fullName>
        <description>List of terms, if Type equals: Payment term change</description>
        <inlineHelpText>In this field you can set value for Type equals &quot;Payment Term Change&quot;. If any values is not proper, you can choose &quot;Other&quot; and fill in any value in a field &quot;Special Payment Term&quot;</inlineHelpText>
        <label>Payment Term List</label>
        <picklist>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Penalty_Fee__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <label>Penalty Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <description>Added in SK_RECOVERY project</description>
        <inlineHelpText>Extension of Status field</inlineHelpText>
        <label>Phase</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Waiting for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Suspended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PhoneAffected__c</fullName>
        <label>Phone # Affected</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Planned_work_email_contact__c</fullName>
        <description>Email for user to whom send notification about planned work</description>
        <inlineHelpText>Email for user to whom send notification about planned work</inlineHelpText>
        <label>Planned work email contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Postpone_Till__c</fullName>
        <description>Date till which case should be postponed. Set by postponing user.</description>
        <inlineHelpText>Date till which case should be postponed. Set by postponing user.</inlineHelpText>
        <label>Postpone Till</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Postponement_Cancellation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, every Case change will restore Case from Postponement status</description>
        <inlineHelpText>When checked, every Case change will restore Case from Postponement status</inlineHelpText>
        <label>Postponement Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postponement_Duration__c</fullName>
        <description>Postponement period. Set by postponing user.</description>
        <inlineHelpText>Postponement period. Set by postponing user.</inlineHelpText>
        <label>Postponement Duration</label>
        <picklist>
            <picklistValues>
                <fullName>15 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM following day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM following day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM following day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <description>Stores the Case Status before postponement</description>
        <inlineHelpText>Stores the Case Status before postponement</inlineHelpText>
        <label>Previous Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Care__c</fullName>
        <formula>TEXT(Account.Primary_Care__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Care</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_indicator__c</fullName>
        <description>Icon display for Critical and Very urgent priority cases</description>
        <formula>IF (ISPICKVAL(Priority, &quot;Critical&quot;),  IMAGE(&quot;/servlet/servlet.FileDownload?file=015T0000000FdjI&quot;, &quot;Critical&quot;,24,24),
 IF (ISPICKVAL(Priority, &quot;Very urgent&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015T0000000FdjJ&quot;, &quot;Very urgent&quot;,24,24),null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Icon display for Critical and Very urgent priority cases</inlineHelpText>
        <label>Priority indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductService__c</fullName>
        <label>Product/Service</label>
        <picklist>
            <picklistValues>
                <fullName>Product A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Complaint reason</inlineHelpText>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing not terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal rebilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong contractual documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call overflow from other provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral contract dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect data entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service problem (SLA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late billing set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inappropriate behaviour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_of_Postponment__c</fullName>
        <description>Reason of case postponement. Integrated with OCTT.</description>
        <inlineHelpText>Reason of case postponement. Integrated with OCTT.</inlineHelpText>
        <label>Reason of Postponement</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting for Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for GTS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Complain recipient name</inlineHelpText>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Number__c</fullName>
        <description>Technical field. Used in emails send from SFDC for building standard reference numbers neccesary for matching emails with proper cases.</description>
        <formula>&quot;ref:&quot;&amp;LEFT( $Organization.Id , 4 )&amp;RIGHT( $Organization.Id , 4 )&amp;&quot;.&quot;&amp;LEFT( Id , 4 )&amp;RIGHT( Id , 5 )&amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technical field. Used in emails send from SFDC for building standard reference numbers neccesary for matching emails with proper cases.</inlineHelpText>
        <label>Ref Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reopened_Before__c</fullName>
        <defaultValue>false</defaultValue>
        <description>https://helpdeskce.in.gtsce.com/browse/PCDSSR-54</description>
        <inlineHelpText>Technical field which specifies, whether the case has been already reopened in the past. If yes, then such another action should be blocked.</inlineHelpText>
        <label>Reopened Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsible_Dept__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>GTS department responsible for Complaint solving</inlineHelpText>
        <label>Responsible Dept.</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsible_Employee__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>GTS employee responsible for Complaint solving</inlineHelpText>
        <label>Responsible Employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Person__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>GTS employee responsible for Complaint solving</inlineHelpText>
        <label>Responsible Person</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice and Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Affected__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>Service percentage failure. Used for compensation calculation and reporting.</inlineHelpText>
        <label>Service Affected (%)</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Service Bundle related to this case. Copied automaticaly to Case Bundle section</description>
        <inlineHelpText>Service Bundle related to this case. Copied automaticaly to Case Bundle section</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Component__c</fullName>
        <description>Service Component related to this case. Copied automaticaly to Case Component section</description>
        <inlineHelpText>Service Component related to this case. Copied automaticaly to Case Component section</inlineHelpText>
        <label>Service Component</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Description__c</fullName>
        <description>Description of Case Solution</description>
        <inlineHelpText>Description of Case Solution</inlineHelpText>
        <label>Solution Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>External record identifier - i.e. from OCTT;</description>
        <externalId>true</externalId>
        <inlineHelpText>External record identifier - i.e. from OCTT</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Payment_Term__c</fullName>
        <description>Maturity of payment (number of days).</description>
        <inlineHelpText>In this field you can set value of &apos;Paymet Term&apos;, when Type equals &apos;Payment Term Change&apos;.</inlineHelpText>
        <label>Special Payment Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Statement_Sent_Date__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Date when an response statement has been send to the Customer. Used for reporting.</inlineHelpText>
        <label>Statement Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subreason__c</fullName>
        <description>Case reason - used by external systems like Extranet</description>
        <inlineHelpText>Case reason - used by external systems like Extranet</inlineHelpText>
        <label>Subreason</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>New contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prolongation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer data change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice forward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Additional desciptive field for case summary. Required to close the Case. Synchronized with OCTT.</description>
        <inlineHelpText>Additional desciptive field for case summary. Required to close the Case. Synchronized with OCTT.</inlineHelpText>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SwitchType__c</fullName>
        <label>Switch Type</label>
        <picklist>
            <picklistValues>
                <fullName>Class 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSLAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATM Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optical Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame Relay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Synchronization_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field. When marked means that previous synchronization has failed. As long as checked integration mechanism will skip this record (to do not block the integration process)</description>
        <inlineHelpText>Technical field. When marked means that previous synchronization has failed. As long as checked integration mechanism will skip this record (to do not block the integration process)</inlineHelpText>
        <label>Synchronization Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synchronization_Log__c</fullName>
        <description>Field stores last returned synchronization message;</description>
        <inlineHelpText>Field stores last returned synchronization message</inlineHelpText>
        <label>Synchronization Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Synchronization_in_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Points the record, if the synchronization request has been send and confirmation has not been returned.</description>
        <inlineHelpText>Points the record, if the synchronization request has been send and confirmation has not been returned.</inlineHelpText>
        <label>Synchronization in Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines, wheter the TT is synchronized with OCTT or not;</description>
        <inlineHelpText>Determines, wheter the TT is synchronized with OCTT or not</inlineHelpText>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Summary_Closing_Date__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>Date of technical summary closing. Received from OCTT.</inlineHelpText>
        <label>Technical Summary Closing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technical_Summary__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>Additional desciptive field for case technical summary. Received from OCTT.</inlineHelpText>
        <label>Technical Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Field for global Terminatio Date modification (used on RelateCaseComponent page)</description>
        <inlineHelpText>Field for global Terminatio Date modification (used on RelateCaseComponent page)</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Token_on__c</fullName>
        <description>Specifies the system which owns the Case (SFDC or OCTT). Changes are allowed only in it.</description>
        <inlineHelpText>Specifies the system which owns the Case (SFDC or OCTT). Changes are allowed only in it.</inlineHelpText>
        <label>Token on</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OCTT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIP_Customer_Case__c</fullName>
        <description>Specifies, whether the Account related the Case is treated as VIP</description>
        <formula>IF( Account.VIP__c = true , &apos;YES&apos; , &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specifies, whether the Account related the Case is treated as VIP</inlineHelpText>
        <label>VIP Customer Case</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Assignee__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Priority_indicator__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Assignee__c</columns>
        <filterScope>Team</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
</CustomObject>